orcid centrado en la introduccion

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Juan Angel Sans Tresserras</title>
-    
+
 </head>
+
 <body>
     <header>
         <div class="Gridheader image2">
@@ -95,18 +97,22 @@
                                 under extreme conditions. Leading the national project InHeXtrem. Several highly competitive
                                 awards as The Group Achievement Awards 2013 granted by NASA have recognized my skills and
                                 research contributions. My h-index is 19 (22 google scholar).</p>
-                            <a href="http://orcid.org/0000-0001-9047-3992" target="_blank">
-                                <img src="" alt="Orcid" />
-                            </a>
-                            <a href="http://www.researcherid.com/rid/J-9362-2014" target="_blank">
-                                <img src="" alt="ResearcherID" />
-                            </a>
-                            <a href="https://scholar.google.es/citations?user=o-s_GiYAAAAJ&hl=es&oi=ao" target="_blank">
-                                <img src="" alt="Google Scholar" />
-                            </a>
-                            <a href="https://www.researchgate.net/profile/J_Sans" target="_blank">
-                                <img src="" alt="Researchgate" />
-                            </a>
+                            <p></p>
+
+                            <div id="orcid">
+                                <a href="http://orcid.org/0000-0001-9047-3992" target="_blank">
+                                    <img src="" alt="Orcid" />
+                                </a>
+                                <a href="http://www.researcherid.com/rid/J-9362-2014" target="_blank">
+                                    <img src="" alt="ResearcherID" />
+                                </a>
+                                <a href="https://scholar.google.es/citations?user=o-s_GiYAAAAJ&hl=es&oi=ao" target="_blank">
+                                    <img src="" alt="Google Scholar" />
+                                </a>
+                                <a href="https://www.researchgate.net/profile/J_Sans" target="_blank">
+                                    <img src="" alt="Researchgate" />
+                                </a>
+                            </div>
                         </div>
                         <div></div>
                         <div>
@@ -124,8 +130,7 @@
                         <img src="images/arrow.svg" alt="arrow">
                     </a>
                     <div></div>
-                    <div></div>
-                    <div></div>
+                   
                     <A name="one"></A>
                 </div>
             </div>
@@ -336,4 +341,5 @@
         });
     </script>
 </body>
+
 </html>
