cambios fondo de pantalla

--- a/index.html
+++ b/index.html
@@ -135,14 +135,12 @@
                 </div>
             </div>
         </div>
-        <div id="Investigacion">
+        <div id="Investigacion" class="image3">
 
         </div>
         <div id="proyectos" class="Gridtwo">
             <div class="Grid2">
-                <span>
-                    <img src="images/Proyectos.jpg" alt="" id="grados" />
-                </span>
+                
             </div>
         </div>
         <div id="divulgacion">
@@ -199,7 +197,7 @@
                 <h2>Logros academicos</h2>
                 <p id="line"></p>
             </article>
-            <div class="Gridcontainer">
+            <div class="Gridcontainer image11">
                 <div></div>
                 <div>
                     <img src="images/0.png" alt="" class="tam">
@@ -265,7 +263,7 @@
             </div>
     </section>
     <footer>
-        <div class="last">
+        <div class="last image1">
             <ul>
                 <li class="espace">
                     <a href="https://www.facebook.com/tresse77" target="_blank">
