cambios fondo de pantalla2

--- a/index.html
+++ b/index.html
@@ -261,9 +261,10 @@
                 </div>
                 <div></div>
             </div>
+        </div>    
     </section>
     <footer>
-        <div class="last image1">
+        <div class="last">
             <ul>
                 <li class="espace">
                     <a href="https://www.facebook.com/tresse77" target="_blank">
