--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body>
     <header>
-        <div class="Gridheader image2">
+        <div class="Gridheader image2 fixed">
             <div class="Grid"></div>
             <div class="Grid">
                 <p class="election">
 
-                    <a href="#">Investigacion</a>
+                    <a href="#one">Investigacion</a>
 
                 </p>
             </div>
@@ -41,14 +41,14 @@
 
             <div class="Grid">
                 <p class="election">
-                    <a href="#">CV</a>
+                    <a href="#baja">CV</a>
                 </p>
             </div>
 
             <div class="Grid">
                 <p class="election">
 
-                    <a href="#">Enlaces de interes</a>
+                    <a href="#footer">Enlaces de interes</a>
 
                 </p>
             </div>
@@ -135,9 +135,23 @@
                 </div>
             </div>
         </div>
-        <div id="Investigacion" class="image3">
+        <div></div>
+        <div class="container-fluid image1">
+            <div class="row">
+                <div class="col-12">
+                    <p></p>
+                    <h2>Investigacion</h2>
+                    <p class="line"></p>
+                </div>
+                <div class="col-2">
 
+                </div>
+                <div id="Investigacion" class="image3 col-8">
+
+                </div>
+            </div>
         </div>
+        
         <div id="proyectos" class="Gridtwo">
             <div class="Grid2">
                 
@@ -195,7 +209,7 @@
             <A name="baja"></A>
             <article>
                 <h2>Logros academicos</h2>
-                <p id="line"></p>
+                <p class="line"></p>
             </article>
             <div class="Gridcontainer image11">
                 <div></div>
@@ -261,7 +275,8 @@
                 </div>
                 <div></div>
             </div>
-        </div>    
+        </div> 
+        <A name = "footer"></A>   
     </section>
     <footer>
         <div class="last">
